--- a/ml/cc/exercises/linear_regression_taxi.ipynb
+++ b/ml/cc/exercises/linear_regression_taxi.ipynb
@@ -1,16 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/SampsonEwuzzy/Blog_Project/blob/main/ml/cc/exercises/linear_regression_taxi.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "metadata": {
         "cellView": "form",
         "id": "X53vZqc7PxCA"
@@ -2303,8 +2293,7 @@
       "collapsed_sections": [
         "sgR4YRjj5T-b"
       ],
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
